--- a/pug/_partials/banner.pug
+++ b/pug/_partials/banner.pug
@@ -1,7 +1,7 @@
 //
    * CoreUI - Free Bootstrap Admin Template
-   * @version v3.0.0-alpha.1
+   * @version v3.0.0-rc.0
    * @link https://coreui.io
-   * Copyright (c) 2019 creativeLabs Łukasz Holeczek
+   * Copyright (c) 2020 creativeLabs Łukasz Holeczek
    * Licensed under MIT (https://coreui.io/license)
 = "\n"
