--- a/pug/_partials/header.pug
+++ b/pug/_partials/header.pug
@@ -1,10 +1,13 @@
 header.c-header.c-header-light.c-header-fixed.c-header-with-subheader
-  button.c-header-toggler.c-class-toggler.d-lg-none.mr-auto(type="button" data-target="#sidebar" data-class="c-sidebar-show")
-    span.c-header-toggler-icon
-  a.c-header-brand.d-sm-none(href="#")
-    img.c-header-brand(src="assets/brand/coreui-base.svg" width="97" height="46" alt="CoreUI Logo")
-  button.c-header-toggler.c-class-toggler.ml-3.d-md-down-none(type="button" data-target="#sidebar" data-class="c-sidebar-lg-show" responsive="true")
-    span.c-header-toggler-icon
+  button.c-header-toggler.c-class-toggler.d-lg-none.mfe-auto(type="button" data-target="#sidebar" data-class="c-sidebar-show")
+    svg.c-icon.c-icon-lg
+      use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-menu")
+  a.c-header-brand.d-lg-none(href="#")
+    svg.c-sidebar-brand-full(width="118" height="46" alt="CoreUI Logo")
+      use(xlink:href="assets/brand/coreui.svg#full")
+  button.c-header-toggler.c-class-toggler.mfs-3.d-md-down-none(type="button" data-target="#sidebar" data-class="c-sidebar-lg-show" responsive="true")
+    svg.c-icon.c-icon-lg
+      use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-menu")
   if !starter
     ul.c-header-nav.d-md-down-none
       li.c-header-nav-item.px-3
