--- a/pug/colors.pug
+++ b/pug/colors.pug
@@ -3,6 +3,7 @@ extends /_layout/default.pug
 block scripts
   if !starter
     // Plugins and scripts required by this view
+    script(src='node_modules/@coreui/utils/dist/coreui-utils.js')
     script(src='js/colors.js')
 
 block view
