--- a/pug/icons/coreui-icons-free.pug
+++ b/pug/icons/coreui-icons-free.pug
@@ -11,7 +11,7 @@ block view
       .card-header
         |  CoreUI Icons - Free
         .card-header-actions
-          a.card-header-action(href='https://coreui/icons/', target='_blank') Download free icons
+          a.card-header-action(href='https://coreui.io/icons/', target='_blank') Download free icons
       .card-body
         .row.text-center
           each icon in icons
