--- a/pug/widgets.pug
+++ b/pug/widgets.pug
@@ -1,10 +1,11 @@
 extends /_layout/default.pug
 
 block styles
-  link(href='node_modules/@coreui/coreui-chartjs/dist/css/coreui-chartjs.css', rel='stylesheet')
+  link(href='node_modules/@coreui/chartjs/dist/css/coreui-chartjs.css', rel='stylesheet')
 
 block scripts
-  script(src='node_modules/@coreui/coreui-chartjs/dist/js/coreui-chartjs.bundle.js')
+  script(src='node_modules/@coreui/chartjs/dist/js/coreui-chartjs.bundle.js')
+  script(src='node_modules/@coreui/utils/dist/coreui-utils.js')
   script(src='js/widgets.js')
 
 block view
