--- a/pug/icons/coreui-icons-brand.pug
+++ b/pug/icons/coreui-icons-brand.pug
@@ -11,7 +11,7 @@ block view
       .card-header
         |  CoreUI Icons - Brand
         .card-header-actions
-          a.card-header-action(href='https://coreui/icons/', target='_blank') Download free brand icons
+          a.card-header-action(href='https://coreui.io/icons/', target='_blank') Download free brand icons
       .card-body
         .row.text-center
           each icon in icons
