--- a/pug/_partials/header.pug
+++ b/pug/_partials/header.pug
@@ -3,7 +3,7 @@ header.c-header.c-header-light.c-header-fixed.c-header-with-subheader
     svg.c-icon.c-icon-lg
       use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-menu")
   a.c-header-brand.d-lg-none(href="#")
-    svg.c-sidebar-brand-full(width="118" height="46" alt="CoreUI Logo")
+    svg(width="118" height="46" alt="CoreUI Logo")
       use(xlink:href="assets/brand/coreui.svg#full")
   button.c-header-toggler.c-class-toggler.mfs-3.d-md-down-none(type="button" data-target="#sidebar" data-class="c-sidebar-lg-show" responsive="true")
     svg.c-icon.c-icon-lg
