--- a/pug/_layout/default.pug
+++ b/pug/_layout/default.pug
@@ -9,11 +9,11 @@ html(lang='en')
     block styles
   body.c-app
     include ../_partials/sidebar.pug
-    .c-wrapper
+    .c-wrapper.c-fixed-components
       include ../_partials/header.pug
       .c-body
         main(class='c-main')
           .container-fluid
             block view
-      include ../_partials/footer.pug
+        include ../_partials/footer.pug
     include ../_partials/scripts.pug
