--- a/pug/_partials/sidebar.pug
+++ b/pug/_partials/sidebar.pug
@@ -16,7 +16,7 @@
     li.c-sidebar-nav-item
       a.c-sidebar-nav-link(href='colors.html')
         svg.c-sidebar-nav-icon
-          use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-drop1")
+          use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-drop")
         |  Colors
     li.c-sidebar-nav-item
       a.c-sidebar-nav-link(href='typography.html')
