--- a/pug/index.pug
+++ b/pug/index.pug
@@ -14,7 +14,7 @@ block view
   .fade-in
     .row
       .col-sm-6.col-lg-3
-        .card.text-white.bg-gradient-primary
+        .card.text-white.bg-primary
           .card-body.card-body.pb-0.d-flex.justify-content-between.align-items-start
             div
               .text-value-lg 9.823
@@ -31,7 +31,7 @@ block view
             canvas#card-chart1.chart(height='70')
       // /.col
       .col-sm-6.col-lg-3
-        .card.text-white.bg-gradient-info
+        .card.text-white.bg-info
           .card-body.card-body.pb-0.d-flex.justify-content-between.align-items-start
             div
               .text-value-lg 9.823
@@ -48,7 +48,7 @@ block view
             canvas#card-chart2.chart(height='70')
       // /.col
       .col-sm-6.col-lg-3
-        .card.text-white.bg-gradient-warning
+        .card.text-white.bg-warning
           .card-body.card-body.pb-0.d-flex.justify-content-between.align-items-start
             div
               .text-value-lg 9.823
@@ -65,7 +65,7 @@ block view
             canvas#card-chart3.chart(height='70')
       // /.col
       .col-sm-6.col-lg-3
-        .card.text-white.bg-gradient-danger
+        .card.text-white.bg-danger
           .card-body.card-body.pb-0.d-flex.justify-content-between.align-items-start
             div
               .text-value-lg 9.823
@@ -110,22 +110,22 @@ block view
             .text-muted Visits
             strong 29.703 Users (40%)
             .progress.progress-xs.mt-2
-              .progress-bar.bg-gradient-success(role='progressbar', style='width: 40%', aria-valuenow='40', aria-valuemin='0', aria-valuemax='100')
+              .progress-bar.bg-success(role='progressbar', style='width: 40%', aria-valuenow='40', aria-valuemin='0', aria-valuemax='100')
           .col-sm-12.col-md.mb-sm-2.mb-0
             .text-muted Unique
             strong 24.093 Users (20%)
             .progress.progress-xs.mt-2
-              .progress-bar.bg-gradient-info(role='progressbar', style='width: 20%', aria-valuenow='20', aria-valuemin='0', aria-valuemax='100')
+              .progress-bar.bg-info(role='progressbar', style='width: 20%', aria-valuenow='20', aria-valuemin='0', aria-valuemax='100')
           .col-sm-12.col-md.mb-sm-2.mb-0
             .text-muted Pageviews
             strong 78.706 Views (60%)
             .progress.progress-xs.mt-2
-              .progress-bar.bg-gradient-warning(role='progressbar', style='width: 60%', aria-valuenow='60', aria-valuemin='0', aria-valuemax='100')
+              .progress-bar.bg-warning(role='progressbar', style='width: 60%', aria-valuenow='60', aria-valuemin='0', aria-valuemax='100')
           .col-sm-12.col-md.mb-sm-2.mb-0
             .text-muted New Users
             strong 22.123 Users (80%)
             .progress.progress-xs.mt-2
-              .progress-bar.bg-gradient-danger(role='progressbar', style='width: 80%', aria-valuenow='80', aria-valuemin='0', aria-valuemax='100')
+              .progress-bar.bg-danger(role='progressbar', style='width: 80%', aria-valuenow='80', aria-valuemin='0', aria-valuemax='100')
           .col-sm-12.col-md.mb-sm-2.mb-0
             .text-muted Bounce Rate
             strong 40.15%
@@ -203,63 +203,63 @@ block view
                       | Monday
                   .progress-group-bars
                     .progress.progress-xs
-                      .progress-bar.bg-gradient-info(role='progressbar', style='width: 34%', aria-valuenow='34', aria-valuemin='0', aria-valuemax='100')
+                      .progress-bar.bg-info(role='progressbar', style='width: 34%', aria-valuenow='34', aria-valuemin='0', aria-valuemax='100')
                     .progress.progress-xs
-                      .progress-bar.bg-gradient-danger(role='progressbar', style='width: 78%', aria-valuenow='78', aria-valuemin='0', aria-valuemax='100')
+                      .progress-bar.bg-danger(role='progressbar', style='width: 78%', aria-valuenow='78', aria-valuemin='0', aria-valuemax='100')
                 .progress-group.mb-4
                   .progress-group-prepend
                     span.progress-group-text
                       | Tuesday
                   .progress-group-bars
                     .progress.progress-xs
-                      .progress-bar.bg-gradient-info(role='progressbar', style='width: 56%', aria-valuenow='56', aria-valuemin='0', aria-valuemax='100')
+                      .progress-bar.bg-info(role='progressbar', style='width: 56%', aria-valuenow='56', aria-valuemin='0', aria-valuemax='100')
                     .progress.progress-xs
-                      .progress-bar.bg-gradient-danger(role='progressbar', style='width: 94%', aria-valuenow='94', aria-valuemin='0', aria-valuemax='100')
+                      .progress-bar.bg-danger(role='progressbar', style='width: 94%', aria-valuenow='94', aria-valuemin='0', aria-valuemax='100')
                 .progress-group.mb-4
                   .progress-group-prepend
                     span.progress-group-text
                       | Wednesday
                   .progress-group-bars
                     .progress.progress-xs
-                      .progress-bar.bg-gradient-info(role='progressbar', style='width: 12%', aria-valuenow='12', aria-valuemin='0', aria-valuemax='100')
+                      .progress-bar.bg-info(role='progressbar', style='width: 12%', aria-valuenow='12', aria-valuemin='0', aria-valuemax='100')
                     .progress.progress-xs
-                      .progress-bar.bg-gradient-danger(role='progressbar', style='width: 67%', aria-valuenow='67', aria-valuemin='0', aria-valuemax='100')
+                      .progress-bar.bg-danger(role='progressbar', style='width: 67%', aria-valuenow='67', aria-valuemin='0', aria-valuemax='100')
                 .progress-group.mb-4
                   .progress-group-prepend
                     span.progress-group-text
                       | Thursday
                   .progress-group-bars
                     .progress.progress-xs
-                      .progress-bar.bg-gradient-info(role='progressbar', style='width: 43%', aria-valuenow='43', aria-valuemin='0', aria-valuemax='100')
+                      .progress-bar.bg-info(role='progressbar', style='width: 43%', aria-valuenow='43', aria-valuemin='0', aria-valuemax='100')
                     .progress.progress-xs
-                      .progress-bar.bg-gradient-danger(role='progressbar', style='width: 91%', aria-valuenow='91', aria-valuemin='0', aria-valuemax='100')
+                      .progress-bar.bg-danger(role='progressbar', style='width: 91%', aria-valuenow='91', aria-valuemin='0', aria-valuemax='100')
                 .progress-group.mb-4
                   .progress-group-prepend
                     span.progress-group-text
                       | Friday
                   .progress-group-bars
                     .progress.progress-xs
-                      .progress-bar.bg-gradient-info(role='progressbar', style='width: 22%', aria-valuenow='22', aria-valuemin='0', aria-valuemax='100')
+                      .progress-bar.bg-info(role='progressbar', style='width: 22%', aria-valuenow='22', aria-valuemin='0', aria-valuemax='100')
                     .progress.progress-xs
-                      .progress-bar.bg-gradient-danger(role='progressbar', style='width: 73%', aria-valuenow='73', aria-valuemin='0', aria-valuemax='100')
+                      .progress-bar.bg-danger(role='progressbar', style='width: 73%', aria-valuenow='73', aria-valuemin='0', aria-valuemax='100')
                 .progress-group.mb-4
                   .progress-group-prepend
                     span.progress-group-text
                       | Saturday
                   .progress-group-bars
                     .progress.progress-xs
-                      .progress-bar.bg-gradient-info(role='progressbar', style='width: 53%', aria-valuenow='53', aria-valuemin='0', aria-valuemax='100')
+                      .progress-bar.bg-info(role='progressbar', style='width: 53%', aria-valuenow='53', aria-valuemin='0', aria-valuemax='100')
                     .progress.progress-xs
-                      .progress-bar.bg-gradient-danger(role='progressbar', style='width: 82%', aria-valuenow='82', aria-valuemin='0', aria-valuemax='100')
+                      .progress-bar.bg-danger(role='progressbar', style='width: 82%', aria-valuenow='82', aria-valuemin='0', aria-valuemax='100')
                 .progress-group.mb-4
                   .progress-group-prepend
                     span.progress-group-text
                       | Sunday
                   .progress-group-bars
                     .progress.progress-xs
-                      .progress-bar.bg-gradient-info(role='progressbar', style='width: 9%', aria-valuenow='9', aria-valuemin='0', aria-valuemax='100')
+                      .progress-bar.bg-info(role='progressbar', style='width: 9%', aria-valuenow='9', aria-valuemin='0', aria-valuemax='100')
                     .progress.progress-xs
-                      .progress-bar.bg-gradient-danger(role='progressbar', style='width: 69%', aria-valuenow='69', aria-valuemin='0', aria-valuemax='100')
+                      .progress-bar.bg-danger(role='progressbar', style='width: 69%', aria-valuenow='69', aria-valuemin='0', aria-valuemax='100')
               // /.col
               .col-sm-6
                 .row
@@ -283,7 +283,7 @@ block view
                     .mfs-auto.font-weight-bold 43%
                   .progress-group-bars
                     .progress.progress-xs
-                      .progress-bar.bg-gradient-warning(role='progressbar', style='width: 43%', aria-valuenow='43', aria-valuemin='0', aria-valuemax='100')
+                      .progress-bar.bg-warning(role='progressbar', style='width: 43%', aria-valuenow='43', aria-valuemin='0', aria-valuemax='100')
                 .progress-group.mb-5
                   .progress-group-header
                     svg.c-icon.progress-group-icon
@@ -292,7 +292,7 @@ block view
                     .mfs-auto.font-weight-bold 37%
                   .progress-group-bars
                     .progress.progress-xs
-                      .progress-bar.bg-gradient-warning(role='progressbar', style='width: 43%', aria-valuenow='43', aria-valuemin='0', aria-valuemax='100')
+                      .progress-bar.bg-warning(role='progressbar', style='width: 43%', aria-valuenow='43', aria-valuemin='0', aria-valuemax='100')
                 .progress-group
                   .progress-group-header.align-items-end
                     svg.c-icon.progress-group-icon
@@ -302,7 +302,7 @@ block view
                     .text-muted.small (56%)
                   .progress-group-bars
                     .progress.progress-xs
-                      .progress-bar.bg-gradient-success(role='progressbar', style='width: 56%', aria-valuenow='56', aria-valuemin='0', aria-valuemax='100')
+                      .progress-bar.bg-success(role='progressbar', style='width: 56%', aria-valuenow='56', aria-valuemin='0', aria-valuemax='100')
                 .progress-group
                   .progress-group-header.align-items-end
                     svg.c-icon.progress-group-icon
@@ -312,7 +312,7 @@ block view
                     .text-muted.small (15%)
                   .progress-group-bars
                     .progress.progress-xs
-                      .progress-bar.bg-gradient-success(role='progressbar', style='width: 15%', aria-valuenow='15', aria-valuemin='0', aria-valuemax='100')
+                      .progress-bar.bg-success(role='progressbar', style='width: 15%', aria-valuenow='15', aria-valuemin='0', aria-valuemax='100')
                 .progress-group
                   .progress-group-header.align-items-end
                     svg.c-icon.progress-group-icon
@@ -322,7 +322,7 @@ block view
                     .text-muted.small (11%)
                   .progress-group-bars
                     .progress.progress-xs
-                      .progress-bar.bg-gradient-success(role='progressbar', style='width: 11%', aria-valuenow='11', aria-valuemin='0', aria-valuemax='100')
+                      .progress-bar.bg-success(role='progressbar', style='width: 11%', aria-valuenow='11', aria-valuemin='0', aria-valuemax='100')
                 .progress-group
                   .progress-group-header.align-items-end
                     svg.c-icon.progress-group-icon
@@ -332,7 +332,7 @@ block view
                     .text-muted.small (8%)
                   .progress-group-bars
                     .progress.progress-xs
-                      .progress-bar.bg-gradient-success(role='progressbar', style='width: 8%', aria-valuenow='8', aria-valuemin='0', aria-valuemax='100')
+                      .progress-bar.bg-success(role='progressbar', style='width: 8%', aria-valuenow='8', aria-valuemin='0', aria-valuemax='100')
               // /.col
             // /.row
             br
@@ -368,7 +368,7 @@ block view
                       .float-right
                         small.text-muted Jun 11, 2015 - Jul 10, 2015
                     .progress.progress-xs
-                      .progress-bar.bg-gradient-success(role='progressbar', style='width: 50%', aria-valuenow='50', aria-valuemin='0', aria-valuemax='100')
+                      .progress-bar.bg-success(role='progressbar', style='width: 50%', aria-valuenow='50', aria-valuemin='0', aria-valuemax='100')
                   td.text-center
                     svg.c-icon.c-icon-xl
                       use(xlink:href="node_modules/@coreui/icons/sprites/brand.svg#cib-cc-mastercard")
@@ -395,7 +395,7 @@ block view
                       .float-right
                         small.text-muted Jun 11, 2015 - Jul 10, 2015
                     .progress.progress-xs
-                      .progress-bar.bg-gradient-info(role='progressbar', style='width: 10%', aria-valuenow='10', aria-valuemin='0', aria-valuemax='100')
+                      .progress-bar.bg-info(role='progressbar', style='width: 10%', aria-valuenow='10', aria-valuemin='0', aria-valuemax='100')
                   td.text-center
                     svg.c-icon.c-icon-xl
                       use(xlink:href="node_modules/@coreui/icons/sprites/brand.svg#cib-cc-visa")
@@ -422,7 +422,7 @@ block view
                       .float-right
                         small.text-muted Jun 11, 2015 - Jul 10, 2015
                     .progress.progress-xs
-                      .progress-bar.bg-gradient-warning(role='progressbar', style='width: 74%', aria-valuenow='74', aria-valuemin='0', aria-valuemax='100')
+                      .progress-bar.bg-warning(role='progressbar', style='width: 74%', aria-valuenow='74', aria-valuemin='0', aria-valuemax='100')
                   td.text-center
                     svg.c-icon.c-icon-xl
                       use(xlink:href="node_modules/@coreui/icons/sprites/brand.svg#cib-cc-stripe")
@@ -449,7 +449,7 @@ block view
                       .float-right
                         small.text-muted Jun 11, 2015 - Jul 10, 2015
                     .progress.progress-xs
-                      .progress-bar.bg-gradient-danger(role='progressbar', style='width: 98%', aria-valuenow='98', aria-valuemin='0', aria-valuemax='100')
+                      .progress-bar.bg-danger(role='progressbar', style='width: 98%', aria-valuenow='98', aria-valuemin='0', aria-valuemax='100')
                   td.text-center
                     svg.c-icon.c-icon-xl
                       use(xlink:href="node_modules/@coreui/icons/sprites/brand.svg#cib-cc-paypal")
@@ -476,7 +476,7 @@ block view
                       .float-right
                         small.text-muted Jun 11, 2015 - Jul 10, 2015
                     .progress.progress-xs
-                      .progress-bar.bg-gradient-info(role='progressbar', style='width: 22%', aria-valuenow='22', aria-valuemin='0', aria-valuemax='100')
+                      .progress-bar.bg-info(role='progressbar', style='width: 22%', aria-valuenow='22', aria-valuemin='0', aria-valuemax='100')
                   td.text-center
                     svg.c-icon.c-icon-xl
                       use(xlink:href="node_modules/@coreui/icons/sprites/brand.svg#cib-cc-apple-pay")
@@ -503,7 +503,7 @@ block view
                       .float-right
                         small.text-muted Jun 11, 2015 - Jul 10, 2015
                     .progress.progress-xs
-                      .progress-bar.bg-gradient-success(role='progressbar', style='width: 43%', aria-valuenow='43', aria-valuemin='0', aria-valuemax='100')
+                      .progress-bar.bg-success(role='progressbar', style='width: 43%', aria-valuenow='43', aria-valuemin='0', aria-valuemax='100')
                   td.text-center
                     svg.c-icon.c-icon-xl
                       use(xlink:href="node_modules/@coreui/icons/sprites/brand.svg#cib-cc-amex")
