refactor: change `mfs-*` to `ms-*` and `mfe-*` to `me-*`

--- a/pug/widgets.pug
+++ b/pug/widgets.pug
@@ -210,7 +210,7 @@ block view
       .col-6.col-lg-3
         .card
           .card-body.p-3.d-flex.align-items-center
-            div.bg-primary.p-3.mfe-3
+            div.bg-primary.p-3.me-3
               svg.c-icon.c-icon-xl
                 use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-settings")
             div
@@ -220,7 +220,7 @@ block view
       .col-6.col-lg-3
         .card
           .card-body.p-3.d-flex.align-items-center
-            div.bg-info.p-3.mfe-3
+            div.bg-info.p-3.me-3
               svg.c-icon.c-icon-xl
                 use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-laptop")
             div
@@ -230,7 +230,7 @@ block view
       .col-6.col-lg-3
         .card
           .card-body.p-3.d-flex.align-items-center
-            div.bg-warning.p-3.mfe-3
+            div.bg-warning.p-3.me-3
               svg.c-icon.c-icon-xl
                 use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-moon")
             div
@@ -240,7 +240,7 @@ block view
       .col-6.col-lg-3
         .card
           .card-body.p-3.d-flex.align-items-center
-            div.bg-danger.p-3.mfe-3
+            div.bg-danger.p-3.me-3
               svg.c-icon.c-icon-xl
                 use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-bell")
             div
@@ -250,7 +250,7 @@ block view
       .col-6.col-lg-3
         .card
           .card-body.p-3.d-flex.align-items-center
-            div.bg-primary.p-3.mfe-3
+            div.bg-primary.p-3.me-3
               svg.c-icon.c-icon-xl
                 use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-settings")
             div
@@ -265,7 +265,7 @@ block view
       .col-6.col-lg-3
         .card
           .card-body.p-3.d-flex.align-items-center
-            div.bg-info.p-3.mfe-3
+            div.bg-info.p-3.me-3
               svg.c-icon.c-icon-xl
                 use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-laptop")
             div
@@ -280,7 +280,7 @@ block view
       .col-6.col-lg-3
         .card
           .card-body.p-3.d-flex.align-items-center
-            div.bg-warning.p-3.mfe-3
+            div.bg-warning.p-3.me-3
               svg.c-icon.c-icon-xl
                 use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-moon")
             div
@@ -295,7 +295,7 @@ block view
       .col-6.col-lg-3
         .card
           .card-body.p-3.d-flex.align-items-center
-            div.bg-danger.p-3.mfe-3
+            div.bg-danger.p-3.me-3
               svg.c-icon.c-icon-xl
                 use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-bell")
             div
@@ -312,7 +312,7 @@ block view
       .col-6.col-lg-3
         .card.overflow-hidden
           .card-body.p-0.d-flex.align-items-center
-            div.bg-primary.p-4.mfe-3
+            div.bg-primary.p-4.me-3
               svg.c-icon.c-icon-xl
                 use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-settings")
             div
@@ -322,7 +322,7 @@ block view
       .col-6.col-lg-3
         .card.overflow-hidden
           .card-body.p-0.d-flex.align-items-center
-            div.bg-info.p-4.mfe-3
+            div.bg-info.p-4.me-3
               svg.c-icon.c-icon-xl
                 use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-laptop")
             div
@@ -332,7 +332,7 @@ block view
       .col-6.col-lg-3
         .card.overflow-hidden
           .card-body.p-0.d-flex.align-items-center
-            div.bg-warning.p-4.mfe-3
+            div.bg-warning.p-4.me-3
               svg.c-icon.c-icon-xl
                 use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-moon")
             div
@@ -342,7 +342,7 @@ block view
       .col-6.col-lg-3
         .card.overflow-hidden
           .card-body.p-0.d-flex.align-items-center
-            div.bg-danger.p-4.mfe-3
+            div.bg-danger.p-4.me-3
               svg.c-icon.c-icon-xl
                 use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-bell")
             div
@@ -352,7 +352,7 @@ block view
       .col-6.col-lg-3
         .card.overflow-hidden
           .card-body.p-0.d-flex.align-items-center
-            div.bg-primary.py-4.px-5.mfe-3
+            div.bg-primary.py-4.px-5.me-3
               svg.c-icon.c-icon-xl
                 use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-settings")
             div
@@ -362,7 +362,7 @@ block view
       .col-6.col-lg-3
         .card.overflow-hidden
           .card-body.p-0.d-flex.align-items-center
-            div.bg-info.py-4.px-5.mfe-3
+            div.bg-info.py-4.px-5.me-3
               svg.c-icon.c-icon-xl
                 use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-laptop")
             div
@@ -372,7 +372,7 @@ block view
       .col-6.col-lg-3
         .card.overflow-hidden
           .card-body.p-0.d-flex.align-items-center
-            div.bg-warning.py-4.px-5.mfe-3
+            div.bg-warning.py-4.px-5.me-3
               svg.c-icon.c-icon-xl
                 use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-moon")
             div
@@ -382,7 +382,7 @@ block view
       .col-6.col-lg-3
         .card.overflow-hidden
           .card-body.p-0.d-flex.align-items-center
-            div.bg-danger.py-4.px-5.mfe-3
+            div.bg-danger.py-4.px-5.me-3
               svg.c-icon.c-icon-xl
                 use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-bell")
             div
