--- a/pug/index.pug
+++ b/pug/index.pug
@@ -280,7 +280,7 @@ block view
                     svg.c-icon.progress-group-icon
                       use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-user")
                     div Male
-                    .mfs-auto.font-weight-bold 43%
+                    .ms-auto.font-weight-bold 43%
                   .progress-group-bars
                     .progress.progress-xs
                       .progress-bar.bg-warning(role='progressbar', style='width: 43%', aria-valuenow='43', aria-valuemin='0', aria-valuemax='100')
@@ -289,7 +289,7 @@ block view
                     svg.c-icon.progress-group-icon
                       use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-user-female")
                     div Female
-                    .mfs-auto.font-weight-bold 37%
+                    .ms-auto.font-weight-bold 37%
                   .progress-group-bars
                     .progress.progress-xs
                       .progress-bar.bg-warning(role='progressbar', style='width: 43%', aria-valuenow='43', aria-valuemin='0', aria-valuemax='100')
@@ -298,7 +298,7 @@ block view
                     svg.c-icon.progress-group-icon
                       use(xlink:href="node_modules/@coreui/icons/sprites/brand.svg#cib-google")
                     div Organic Search
-                    .mfs-auto.font-weight-bold.mfe-2 191.235
+                    .ms-auto.font-weight-bold.me-2 191.235
                     .text-muted.small (56%)
                   .progress-group-bars
                     .progress.progress-xs
@@ -308,7 +308,7 @@ block view
                     svg.c-icon.progress-group-icon
                       use(xlink:href="node_modules/@coreui/icons/sprites/brand.svg#cib-facebook-f")
                     div Facebook
-                    .mfs-auto.font-weight-bold.mfe-2 51.223
+                    .ms-auto.font-weight-bold.me-2 51.223
                     .text-muted.small (15%)
                   .progress-group-bars
                     .progress.progress-xs
@@ -318,7 +318,7 @@ block view
                     svg.c-icon.progress-group-icon
                       use(xlink:href="node_modules/@coreui/icons/sprites/brand.svg#cib-twitter")
                     div Twitter
-                    .mfs-auto.font-weight-bold.mfe-2 37.564
+                    .ms-auto.font-weight-bold.me-2 37.564
                     .text-muted.small (11%)
                   .progress-group-bars
                     .progress.progress-xs
@@ -328,7 +328,7 @@ block view
                     svg.c-icon.progress-group-icon
                       use(xlink:href="node_modules/@coreui/icons/sprites/brand.svg#cib-linkedin")
                     div LinkedIn
-                    .mfs-auto.font-weight-bold.mfe-2 27.319
+                    .ms-auto.font-weight-bold.me-2 27.319
                     .text-muted.small (8%)
                   .progress-group-bars
                     .progress.progress-xs
